# gemini-playground

./: .env.example  .gitignore  README.md  plan.md
.cursor/rules/: DEVELOPMENT_PLAN.md  acai-ai-guidelines.md  all-you-can-cook-rules.md  frontend-only-architecture.md  react-cooking-components.md  typescript-cooking.md
.github/workflows/: deploy-agent.yml
agent/: .dockerignore  Dockerfile  README.md  _main.py  livekit.toml  main.py  pyproject.toml  requirements.txt
landing/: next.config.mjs  package-lock.json  package.json  tailwind.config.js
landing/src/app/: globals.css  layout.tsx  page.tsx
landing/src/components/: features-section.tsx  hero-section.tsx  meet-acai-section.tsx  waitlist-section.tsx
web/: DEBUGGING_STEPS.md  FIREBASE_SETUP.md  FIRESTORE_SECURITY_SETUP.md  firestore.rules  package.json  pnpm-lock.yaml  tailwind.config.ts
web/scripts/: README.md  add-signature-recipe-auth.ts  check-env.ts  deploy-firestore-rules.js
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: auth.tsx  chat-controls.tsx  chat.tsx  code-viewer.tsx  configuration-form-drawer.tsx  configuration-form.tsx  connect-button.tsx  cooking-session.tsx  debug-signature-recipes.tsx  firebase-debug.tsx  gemini.tsx  header.tsx  instructions-editor.tsx  instructions.tsx  lk.tsx  login-page.tsx  max-output-tokens-selector.tsx  modalities-selector.tsx  model-selector.tsx  models-showcase.tsx  nano-banana-feed.tsx  nano-banana-toggle.tsx  preset-selector.tsx  preset-share.tsx  profile-page.tsx  recipe-browser.tsx  recipe-completion-summary.tsx  recipe-selector.tsx  (+9 more)
(+50 files in other folders)
