[project]
name = "gemini-agent"
version = "0.1.0"
description = "LiveKit Agent for Gemini Playground"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "livekit",
    "livekit-agents>=1.2.0",
    "livekit-plugins-google>=1.0.0",
    "python-dotenv",
    "google-genai>=1.43.0",
    "Pillow>=10.0.0",
    "packaging>=21.0",
]

