[project]
name = "gemini-agent"
version = "0.1.0"
description = "LiveKit Agent for Gemini Playground"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "livekit>=0.19.0",
    "livekit-agents>=1.3.5",
    "livekit-plugins-google>=1.3.5",
    "python-dotenv",
    "google-genai>=1.47.0",
    "Pillow>=12.0.0",
    "packaging>=21.0",
]

